# coletaMetricas

./: .gitignore  README.md  experiment.env  pyproject.toml  requirements-dev.txt
.github/workflows/: ci.yml
data/: experiment_plan.csv  pipeline_metrics.csv
docs/: relatorio.md
scripts/: collect_metrics.py  dispatch_experiment_runs.py  generate_charts.py  summarize_pytest.py
src/coleta_metricas/: __init__.py  calculator.py
tests/: conftest.py  test_calculator.py
